Don't build stroke paths for stroke-width==0 (bug #234519). Not part of default build - SVG only.